--- a/Roketto Liggu Sutattu/Base.lproj/Main.storyboard
+++ b/Roketto Liggu Sutattu/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="IO6-ky-pof">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,8 +9,16 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="ChalkboardSE.ttc">
+            <string>ChalkboardSE-Regular</string>
+        </array>
+        <array key="Chalkduster.ttf">
+            <string>Chalkduster</string>
+        </array>
+    </customFonts>
     <scenes>
-        <!--View Controller-->
+        <!--Item-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Roketto_Liggu_Sutattu" customModuleProvider="target" sceneMemberID="viewController">
@@ -32,10 +40,146 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="FkA-GM-KKG"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="117.59999999999999" y="118.29085457271366"/>
+            <point key="canvasLocation" x="588" y="937"/>
+        </scene>
+        <!--Item 2-->
+        <scene sceneID="BBq-mf-Y9w">
+            <objects>
+                <viewController id="cLf-94-OwQ" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="WGj-SK-iMI">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="hc2-YN-Dct"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 2" id="Ui6-95-3Oc"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VIY-hV-ceK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="588" y="269"/>
+        </scene>
+        <!--Item 1-->
+        <scene sceneID="fi6-x9-hwb">
+            <objects>
+                <viewController id="Ib5-G1-C8d" customClass="SearchViewController" customModule="Roketto_Liggu_Sutattu" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="f4N-FR-W1T">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="6zPF6hO" translatesAutoresizingMaskIntoConstraints="NO" id="sxF-xC-hg7">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter your Steam ID :" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q0D-L5-P0b">
+                                <rect key="frame" x="32" y="105" width="311" height="32"/>
+                                <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="25"/>
+                                <color key="textColor" red="0.99942404029999998" green="0.98555368190000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1Dc-TM-TZG">
+                                <rect key="frame" x="16" y="371" width="343" height="49"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="49" id="NNI-kf-Cj8"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="ChalkboardSE-Regular" family="Chalkboard SE" pointSize="33"/>
+                                <color key="tintColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="Connect"/>
+                                <connections>
+                                    <action selector="connectButton:" destination="Ib5-G1-C8d" eventType="touchUpInside" id="qTj-ky-Ygi"/>
+                                    <segue destination="F4I-Hs-YPf" kind="show" id="CGg-sB-mr0"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Steam ID" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cmJ-OO-mvV">
+                                <rect key="frame" x="16" y="227" width="343" height="44"/>
+                                <color key="backgroundColor" cocoaTouchSystemColor="lightTextColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="W5I-On-vVC"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="sxF-xC-hg7" firstAttribute="trailing" secondItem="Bqf-lA-huw" secondAttribute="trailing" id="3cQ-9Z-nf0"/>
+                            <constraint firstItem="Bqf-lA-huw" firstAttribute="trailing" secondItem="1Dc-TM-TZG" secondAttribute="trailing" constant="16" id="D6L-iu-6m0"/>
+                            <constraint firstItem="sxF-xC-hg7" firstAttribute="leading" secondItem="Bqf-lA-huw" secondAttribute="leading" id="IXl-2V-wES"/>
+                            <constraint firstItem="sxF-xC-hg7" firstAttribute="top" secondItem="f4N-FR-W1T" secondAttribute="top" id="Ldh-0U-2Cf"/>
+                            <constraint firstAttribute="bottom" secondItem="sxF-xC-hg7" secondAttribute="bottom" id="Mja-nD-380"/>
+                            <constraint firstItem="cmJ-OO-mvV" firstAttribute="top" secondItem="Q0D-L5-P0b" secondAttribute="bottom" constant="90" id="NH4-mP-3se"/>
+                            <constraint firstItem="Q0D-L5-P0b" firstAttribute="top" secondItem="Bqf-lA-huw" secondAttribute="top" constant="85" id="Wdj-rT-42E"/>
+                            <constraint firstItem="Q0D-L5-P0b" firstAttribute="centerX" secondItem="f4N-FR-W1T" secondAttribute="centerX" id="ccI-IM-QC4"/>
+                            <constraint firstItem="cmJ-OO-mvV" firstAttribute="centerX" secondItem="f4N-FR-W1T" secondAttribute="centerX" id="e8F-cf-6QX"/>
+                            <constraint firstItem="cmJ-OO-mvV" firstAttribute="leading" secondItem="Bqf-lA-huw" secondAttribute="leading" constant="16" id="kER-zN-tzF"/>
+                            <constraint firstItem="1Dc-TM-TZG" firstAttribute="centerX" secondItem="f4N-FR-W1T" secondAttribute="centerX" id="rR0-Qw-0hl"/>
+                            <constraint firstItem="Bqf-lA-huw" firstAttribute="trailing" secondItem="cmJ-OO-mvV" secondAttribute="trailing" constant="16" id="wjy-bw-beV"/>
+                            <constraint firstItem="1Dc-TM-TZG" firstAttribute="top" secondItem="cmJ-OO-mvV" secondAttribute="bottom" constant="100" id="xip-jV-k2w"/>
+                            <constraint firstItem="1Dc-TM-TZG" firstAttribute="leading" secondItem="Bqf-lA-huw" secondAttribute="leading" constant="16" id="yki-Q5-Kw0"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Bqf-lA-huw"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 1" id="lUI-6S-gqt"/>
+                    <connections>
+                        <outlet property="steamIDTextField" destination="cmJ-OO-mvV" id="TvT-CW-hBK"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="M6L-vD-S8l" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="588" y="-396.25187406296857"/>
+        </scene>
+        <!--Playlist Table View Controller-->
+        <scene sceneID="HCY-RG-gzX">
+            <objects>
+                <tableViewController id="F4I-Hs-YPf" customClass="PlaylistTableViewController" customModule="Roketto_Liggu_Sutattu" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Fga-9l-Ipo">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="FL3-A8-bfc">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="FL3-A8-bfc" id="n1i-2w-fXm">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="F4I-Hs-YPf" id="6qZ-Ax-uII"/>
+                            <outlet property="delegate" destination="F4I-Hs-YPf" id="jlr-gA-sUh"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ll7-yW-1Ll" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1329" y="-396"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="Uvu-4q-1mk">
+            <objects>
+                <tabBarController id="IO6-ky-pof" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="bbK-v4-u0o">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="Ib5-G1-C8d" kind="relationship" relationship="viewControllers" id="iEI-M8-hVv"/>
+                        <segue destination="cLf-94-OwQ" kind="relationship" relationship="viewControllers" id="MvP-ns-wyy"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="azU-sH-7S2"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GSD-9z-6BL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-365" y="-63"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="6zPF6hO" width="1510" height="2135"/>
+    </resources>
 </document>
