--- a/Roketto Liggu Sutattu/Search/Playlist/Cell/PlaylistTableViewCell.xib
+++ b/Roketto Liggu Sutattu/Search/Playlist/Cell/PlaylistTableViewCell.xib
@@ -1,21 +1,106 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="PlaylistTableViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="65" id="KGk-i7-Jjw" customClass="PlaylistTableViewCell" customModule="Roketto_Liggu_Sutattu" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="352" height="65"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="352" height="64.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RankType" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NnE-kv-PSR">
+                        <rect key="frame" x="65" y="10" width="104" height="24"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="24" id="7cm-Bw-bYW"/>
+                            <constraint firstAttribute="width" constant="104" id="bFt-yW-hjA"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rating" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gdi-bp-7Hw">
+                        <rect key="frame" x="188" y="10" width="54" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="54" id="LKb-u8-IOK"/>
+                            <constraint firstAttribute="height" constant="21" id="WdV-8D-nYl"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="nbGame" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ADr-EU-NJI">
+                        <rect key="frame" x="272" y="10" width="65" height="44"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rank" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cw5-d3-tMe">
+                        <rect key="frame" x="65" y="41" width="104" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="2mU-28-4mK"/>
+                            <constraint firstAttribute="width" constant="104" id="bQ4-pJ-a77"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BPR-vr-G7g">
+                        <rect key="frame" x="10" y="10" width="45" height="45"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="45" id="OZa-ld-3yb"/>
+                            <constraint firstAttribute="width" constant="45" id="SPy-yp-EgJ"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Top" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xSE-Jg-9c0">
+                        <rect key="frame" x="188" y="38" width="54" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="54" id="De4-JC-Kh0"/>
+                            <constraint firstAttribute="height" constant="21" id="YUa-v4-TgB"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="NnE-kv-PSR" firstAttribute="leading" secondItem="BPR-vr-G7g" secondAttribute="trailing" constant="10" id="1ax-an-zBz"/>
+                    <constraint firstItem="BPR-vr-G7g" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="31c-nN-jad"/>
+                    <constraint firstItem="ADr-EU-NJI" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="3DS-vh-r1a"/>
+                    <constraint firstItem="gdi-bp-7Hw" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="3qK-SD-726"/>
+                    <constraint firstAttribute="bottom" secondItem="BPR-vr-G7g" secondAttribute="bottom" constant="10" id="4SF-mV-Yld"/>
+                    <constraint firstAttribute="bottom" secondItem="ADr-EU-NJI" secondAttribute="bottom" constant="10" id="4Sw-Ec-gFA"/>
+                    <constraint firstItem="gdi-bp-7Hw" firstAttribute="leading" secondItem="NnE-kv-PSR" secondAttribute="trailing" constant="19" id="SPc-Y9-NyU"/>
+                    <constraint firstItem="cw5-d3-tMe" firstAttribute="leading" secondItem="BPR-vr-G7g" secondAttribute="trailing" constant="10" id="Yab-xV-Eri"/>
+                    <constraint firstItem="xSE-Jg-9c0" firstAttribute="leading" secondItem="cw5-d3-tMe" secondAttribute="trailing" constant="19" id="Ymz-xT-3hA"/>
+                    <constraint firstItem="cw5-d3-tMe" firstAttribute="top" secondItem="NnE-kv-PSR" secondAttribute="bottom" constant="7" id="aWZ-WY-jfL"/>
+                    <constraint firstItem="BPR-vr-G7g" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="foQ-51-FfI"/>
+                    <constraint firstItem="xSE-Jg-9c0" firstAttribute="top" secondItem="gdi-bp-7Hw" secondAttribute="bottom" constant="7" id="hMB-Kr-oi9"/>
+                    <constraint firstItem="NnE-kv-PSR" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="iam-pJ-HMu"/>
+                    <constraint firstItem="ADr-EU-NJI" firstAttribute="leading" secondItem="gdi-bp-7Hw" secondAttribute="trailing" constant="30" id="oqr-r4-7Da"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="mmrLabel" destination="gdi-bp-7Hw" id="Igg-SL-gHB"/>
+                <outlet property="nbOfGamesLabel" destination="ADr-EU-NJI" id="hc9-Kd-9mG"/>
+                <outlet property="percentToTheTopLabel" destination="xSE-Jg-9c0" id="YpM-Vc-goD"/>
+                <outlet property="rankImageView" destination="BPR-vr-G7g" id="xZu-J9-NyB"/>
+                <outlet property="rankLabel" destination="cw5-d3-tMe" id="Q02-i5-Qod"/>
+                <outlet property="rankTitleLabel" destination="NnE-kv-PSR" id="5Cg-RP-2Hc"/>
+                <outlet property="rankTypeLabel" destination="NnE-kv-PSR" id="XeG-Pj-wxN"/>
+            </connections>
+            <point key="canvasLocation" x="-3" y="63.5"/>
         </tableViewCell>
     </objects>
 </document>
